# graphql-fastapi-nextjs-sample

./: .gitignore  Makefile  docker-compose.yml
services/api/: .dockerignore  Makefile  alembic.ini  pyproject.toml
services/api/db/: local.Dockerfile
services/api/docker/: local.Dockerfile
services/api/migration/: env.py  script.py.mako
services/api/migration/versions/: 96f40f79b17d_db_init_create_tasks.py
services/api/scripts/: entrypoint.local.sh
services/api/src/: config.py  db.py  main.py
services/api/src/domain/: ping.py
services/api/src/graphql/: route.py
services/api/src/graphql/resolver/: tasks.py
services/api/src/models/: Tasks.py  __init__.py
services/api/src/schemas/: status.py  tasks.py
services/api/src/tests/: conftest.py
services/api/src/tests/graphql/: test_query_tasks.py
services/api/src/tests/rest/: test_ping.py
services/front/: codegen.yml  package-lock.json  package.json  schema.graphql
services/front/docker/: local.Dockerfile
services/front/src/components/: AddTaskInput.tsx  Column.tsx  DragTest.tsx  Task.tsx  Tasks.tsx
services/front/src/graphql/: Tasks.graphql
services/front/src/pages/: _app.tsx  dnd.tsx  index.tsx
services/front/src/styles/: Dnd.module.css  theme.ts
